# memory-rlm

./: .gitignore  .mcp.json  Cargo.toml  README.md  chat.py  install.ps1  install.sh
.claude-plugin/: plugin.json
.github/workflows/: release.yml
commands/: status.md
hooks/: hooks.json
scripts/: bootstrap  bootstrap.cmd  release
skills/setup/: SKILL.md
src/: compute.rs  llm.rs  local_model.rs  main.rs  update.rs  wgpu_inference.rs  wgpu_model.rs
src/db/: mod.rs
src/hooks/: compact.rs  pre_tool_use.rs  session.rs
src/indexer/: distill.rs  files.rs  git.rs
src/shaders/: add_inplace.wgsl  add_inplace_batch.wgsl  argmax.wgsl  attn_score.wgsl  attn_score_batch.wgsl  attn_value.wgsl  attn_value_batch.wgsl  kv_write.wgsl  kv_write_batch.wgsl  matmul.wgsl  matmul_bias.wgsl  matvec.wgsl  matvec_bias.wgsl  matvec_q4k.wgsl  rmsnorm.wgsl  rmsnorm_batch.wgsl  rope.wgsl  rope_batch.wgsl  silu_mul.wgsl  silu_mul_batch.wgsl  softmax.wgsl  softmax_batch.wgsl
