[package]
name = "claude-rlm"
version = "0.2.0"
edition = "2021"
license = "BUSL-1.1"

[dependencies]
# MCP server
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.33", features = ["bundled", "vtab"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Tree-sitter
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

# File watching
notify = "7"

# HTTP client (for LLM API calls)
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Utilities
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
ignore = "0.4"

# Local inference (optional — enable with "local-inference" feature)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", optional = true }
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
half = { version = "2", optional = true }

[features]
default = ["local-inference"]
local-inference = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
    "dep:wgpu",
    "dep:pollster",
    "dep:bytemuck",
    "dep:half",
]
cuda = ["candle-core/cuda"]

[target.'cfg(windows)'.dependencies]
zip = "2"

[target.'cfg(not(windows))'.dependencies]
flate2 = "1"
tar = "0.4"
